[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["pixidream <developer@studiopixidream.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"
websockets = "^11.0.2"
imutils = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
